Some fixes to the core and plugin code to allow `proof by`